<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="2dp"
    android:layout_marginBottom="5dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/Imagemv"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="5dp"
        android:src="@mipmap/musicplayer"
        app:shapeAppearanceOverlay="@color/cool_pink" />


    <TextView
        android:id="@+id/songName"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:singleLine="true"
        android:layout_toEndOf="@id/Imagemv"
        android:gravity="center_vertical"
        android:text="@string/song_name"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/songAlbum"
        android:singleLine="true"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@id/Imagemv"
        android:text="@string/songalbum"
        />

    <TextView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/start_tv"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:textColor="@color/black"
        android:id="@+id/songDuration"
        android:layout_marginHorizontal="5dp"/>
</RelativeLayout>